Updating cards and content

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     
     <nav class="main-nav" role="navigation">
         <div class="container nav-container">
-            <div class="nav-brand">AD-14</div>
+            <div class="nav-brand">
+                <a href="#" class="nav-brand-link">Democrats for Progress & Justice</a>
+            </div>
             <div class="nav-links">
                 <a href="#candidates-title">Candidates</a>
                 <a href="#how-to-vote-title">How to Vote</a>
@@ -49,7 +51,7 @@
                     </a>
                 </div>
                 <div class="hero-image-container">
-                    <img src="images/ADEMs-AD14-Slate 04.png" alt="AD-14 Progressive Slate" class="hero-image">
+                    <img src="images/ADEMs-AD14-Slate Printable.png" alt="Democrats for Progress and Justice Slate - AD-14 Candidates" class="hero-image">
                 </div>
             </div>
         </div>
@@ -151,6 +153,14 @@
                         <span class="priority-icon">📚</span>
                         <strong>Educational Equity:</strong> Supporting strong public schools and ensuring every child has access to quality education.
                     </div>
+                    <div class="priority">
+                        <span class="priority-icon">🤝</span>
+                        <strong>Good Governance:</strong> Promoting transparency, accountability, and inclusive decision-making in our democratic institutions.
+                    </div>
+                    <div class="priority">
+                        <span class="priority-icon">🛡️</span>
+                        <strong>Public Safety:</strong> Advancing community-centered approaches to safety that prioritize prevention, mental health, and social services.
+                    </div>
                 </div>
             </div>
         </section>
@@ -162,6 +172,12 @@
             <p class="footer-note">This website is accessible to all users. If you need assistance, please contact us.</p>
         </div>
     </footer>
+
+    <button id="scrollTopBtn" aria-label="Scroll to top" onclick="scrollToTop()">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24">
+            <path d="M12 4l-8 8h16l-8-8z"/>
+        </svg>
+    </button>
 
     <script src="script.js"></script>
 </body>
