--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
             <div class="nav-brand">
                 <a href="#" class="nav-brand-link">Democrats for Progress & Justice</a>
             </div>
-            <div class="nav-links">
+            <button class="hamburger-menu" aria-label="Toggle navigation menu">
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+            </button>
+            <div class="nav-links" id="nav-links">
                 <a href="#candidates-title">Candidates</a>
                 <a href="#how-to-vote-title">How to Vote</a>
                 <a href="https://ademelections.com" target="_blank" rel="noopener noreferrer" class="nav-cta">Register to Vote</a>
@@ -74,7 +79,7 @@
                     <div class="vote-steps">
                         <div class="vote-step">
                             <h4>1. Check Your Email</h4>
-                            <p>If you registered by January 31st, you should have received your ballot by email. Check your spam folder if you don't see it.</p>
+                            <p>If you registered by January 31st, you should have received your ballot information by email. Check your spam folder if you don't see it. Alternatively, you should have received a physical letter (delivered by USPS) from CADEM with your ballot information.</p>
                         </div>
                         <div class="vote-step">
                             <h4>2. Vote for Our Slate</h4>
@@ -101,11 +106,11 @@
                         <div class="vote-steps">
                             <div class="vote-step">
                                 <h4>What to Bring</h4>
-                                <p>Bring a valid ID and proof of residence in Assembly District 14.</p>
+                                <p>Bring a valid ID and (if not on your ID) proof of residence in Assembly District 14.</p>
                             </div>
                             <div class="vote-step">
                                 <h4>At the Location</h4>
-                                <p>You'll be able to register and vote at the same time. Community volunteers will be there to help guide you through the process.</p>
+                                <p>You'll be able to register and vote at the same time. Community volunteers will be there to help guide you through the process. If possible, it's best to register in advance at <a href="https://ademelections.com" target="_blank" rel="noopener noreferrer">www.ademelections.com</a>.</p>
                             </div>
                         </div>
                     </div>
@@ -138,28 +143,46 @@
                 <p>The Democrats for Progress and Justice Slate brings together community leaders, policy experts, and advocates committed to advancing progressive values through practical action. Our priorities:</p>
                 <div class="priorities-grid">
                     <div class="priority">
-                        <span class="priority-icon">🏘️</span>
-                        <strong>Housing Justice:</strong> Creating effective policies for affordable housing and preventing displacement in our communities.
+                        <div class="priority-header">
+                            <span class="priority-icon">🏘️</span>
+                            <strong>Housing Justice:</strong>
+                        </div>
+                        Creating effective policies for affordable housing and preventing displacement in our communities.
                     </div>
                     <div class="priority">
-                        <span class="priority-icon">🌍</span>
-                        <strong>Climate Leadership:</strong> Advancing bold, practical solutions for climate resilience and environmental justice.
+                        <div class="priority-header">
+                            <span class="priority-icon">🌍</span>
+                            <strong>Climate Leadership:</strong>
+                        </div>
+                        Advancing bold, practical solutions for climate resilience and environmental justice.
                     </div>
                     <div class="priority">
-                        <span class="priority-icon">⚖️</span>
-                        <strong>Economic Justice:</strong> Building an economy that works for everyone through progressive policies and fair opportunities.
+                        <div class="priority-header">
+                            <span class="priority-icon">⚖️</span>
+                            <strong>Economic Justice:</strong>
+                        </div>
+                        Building an economy that works for everyone through progressive policies and fair opportunities.
                     </div>
                     <div class="priority">
-                        <span class="priority-icon">📚</span>
-                        <strong>Educational Equity:</strong> Supporting strong public schools and ensuring every child has access to quality education.
+                        <div class="priority-header">
+                            <span class="priority-icon">📚</span>
+                            <strong>Educational Equity:</strong>
+                        </div>
+                        Supporting strong public schools and ensuring every child has access to quality education.
                     </div>
                     <div class="priority">
-                        <span class="priority-icon">🤝</span>
-                        <strong>Good Governance:</strong> Promoting transparency, accountability, and inclusive decision-making in our democratic institutions.
+                        <div class="priority-header">
+                            <span class="priority-icon">🤝</span>
+                            <strong>Good Governance:</strong>
+                        </div>
+                        Promoting transparency, accountability, and inclusive decision-making in our democratic institutions.
                     </div>
                     <div class="priority">
-                        <span class="priority-icon">🛡️</span>
-                        <strong>Public Safety:</strong> Advancing community-centered approaches to safety that prioritize prevention, mental health, and social services.
+                        <div class="priority-header">
+                            <span class="priority-icon">🛡️</span>
+                            <strong>Public Safety:</strong>
+                        </div>
+                        Advancing community-centered approaches to safety that prioritize prevention, mental health, and social services.
                     </div>
                 </div>
             </div>
@@ -168,8 +191,7 @@
 
     <footer role="contentinfo">
         <div class="container">
-            <p>Paid for by the Democrats for Progress and Justice Slate</p>
-            <p class="footer-note">This website is accessible to all users. If you need assistance, please contact us.</p>
+            <p>© 2024 AD14 Democrats for Progress and Justice. Labor donated.</p>
         </div>
     </footer>
 
